:sparkles: complete 2st

--- a/03-OutputParser/01-PydanticOuputParser.ipynb
+++ b/03-OutputParser/01-PydanticOuputParser.ipynb
@@ -24,9 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T06:18:59.250952700Z",
+     "start_time": "2024-10-01T06:18:59.240327800Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -35,9 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T06:18:59.792714300Z",
+     "start_time": "2024-10-01T06:18:59.780861100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH03-OutputParser\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install langchain-teddynote\n",
@@ -49,8 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T06:19:01.002299100Z",
+     "start_time": "2024-10-01T06:19:00.510559700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 실시간 출력을 위한 import\n",
@@ -59,16 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T06:19:02.693126600Z",
+     "start_time": "2024-10-01T06:19:01.494536Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.output_parsers import PydanticOutputParser\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "\n",
-    "\n",
-    "llm = ChatOpenAI(temperature=0, model_name=\"gpt-4o\")"
+    "llm = ChatOpenAI(temperature=0, model_name=\"gpt-3.5-turbo\")"
    ]
   },
   {
@@ -80,8 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:34:08.721790500Z",
+     "start_time": "2024-09-28T16:34:08.721270600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "email_conversation = \"\"\"From: 김철수 (chulsoo.kim@bikecorporation.me)\n",
@@ -113,9 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:34:17.854606700Z",
+     "start_time": "2024-09-28T16:34:15.727403300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "다음은 이메일의 중요한 내용입니다:\n",
+      "\n",
+      "1. **요청 사항**:\n",
+      "   - ZENESIS 자전거 모델에 대한 상세한 브로슈어 요청 (기술 사양, 배터리 성능, 디자인 정보 포함).\n",
+      "\n",
+      "2. **미팅 제안**:\n",
+      "   - 다음 주 화요일(1월 15일) 오전 10시에 미팅 제안.\n",
+      "   - 미팅 장소: 귀사 사무실.\n",
+      "3. **목적**:\n",
+      "   - ZENESIS 자전거 유통 협력 논의.\n",
+      "   - 유통 전략과 마케팅 계획 구체화."
+     ]
+    }
+   ],
    "source": [
     "from itertools import chain\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -135,9 +201,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:34:22.077074900Z",
+     "start_time": "2024-09-28T16:34:22.060999600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "다음은 이메일의 중요한 내용입니다:\n",
+      "\n",
+      "1. **요청 사항**:\n",
+      "   - ZENESIS 자전거 모델에 대한 상세한 브로슈어 요청 (기술 사양, 배터리 성능, 디자인 정보 포함).\n",
+      "\n",
+      "2. **미팅 제안**:\n",
+      "   - 다음 주 화요일(1월 15일) 오전 10시에 미팅 제안.\n",
+      "   - 미팅 장소: 귀사 사무실.\n",
+      "\n",
+      "3. **목적**:\n",
+      "   - ZENESIS 자전거 유통 협력 논의.\n",
+      "   - 유통 전략과 마케팅 계획 구체화.\n"
+     ]
+    }
+   ],
    "source": [
     "print(output)"
    ]
@@ -153,8 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:35:11.840564900Z",
+     "start_time": "2024-09-28T16:35:11.824610500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class EmailSummary(BaseModel):\n",
@@ -171,9 +266,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:35:15.141198300Z",
+     "start_time": "2024-09-28T16:35:15.138931Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output should be formatted as a JSON instance that conforms to the JSON schema below.\n",
+      "\n",
+      "As an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\n",
+      "the object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\n",
+      "\n",
+      "Here is the output schema:\n",
+      "```\n",
+      "{\"properties\": {\"person\": {\"title\": \"Person\", \"description\": \"메일을 보낸 사람\", \"type\": \"string\"}, \"email\": {\"title\": \"Email\", \"description\": \"메일을 보낸 사람의 이메일 주소\", \"type\": \"string\"}, \"subject\": {\"title\": \"Subject\", \"description\": \"메일 제목\", \"type\": \"string\"}, \"summary\": {\"title\": \"Summary\", \"description\": \"메일 본문을 요약한 텍스트\", \"type\": \"string\"}, \"date\": {\"title\": \"Date\", \"description\": \"메일 본문에 언급된 미팅 날짜와 시간\", \"type\": \"string\"}}, \"required\": [\"person\", \"email\", \"subject\", \"summary\", \"date\"]}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "# instruction 을 출력합니다.\n",
     "print(parser.get_format_instructions())"
@@ -192,8 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:36:06.050542300Z",
+     "start_time": "2024-09-28T16:36:06.034756Z"
+    }
+   },
    "outputs": [],
    "source": [
     "prompt = PromptTemplate.from_template(\n",
@@ -224,8 +345,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:36:08.015270800Z",
+     "start_time": "2024-09-28T16:36:08.009003700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# chain 을 생성합니다.\n",
@@ -241,9 +367,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:36:15.383001100Z",
+     "start_time": "2024-09-28T16:36:14.030516500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```json\n",
+      "{\n",
+      "  \"person\": \"김철수\",\n",
+      "  \"email\": \"chulsoo.kim@bikecorporation.me\",\n",
+      "  \"subject\": \"\\\"ZENESIS\\\" 자전거 유통 협력 및 미팅 일정 제안\",\n",
+      "  \"summary\": \"바이크코퍼레이션의 김철수 상무가 테디인터내셔널의 이은채 대리에게 신규 자전거 'ZENESIS' 모델의 브로슈어 요청 및 유통 협력 논의를 위한 미팅을 제안함.\",\n",
+      "  \"date\": \"1월 15일 오전 10시\"\n",
+      "}\n",
+      "```"
+     ]
+    }
+   ],
    "source": [
     "# chain 을 실행하고 결과를 출력합니다.\n",
     "response = chain.stream(\n",
@@ -266,9 +413,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:36:45.534651700Z",
+     "start_time": "2024-09-28T16:36:45.525964100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person='김철수' email='chulsoo.kim@bikecorporation.me' subject='\"ZENESIS\" 자전거 유통 협력 및 미팅 일정 제안' summary=\"바이크코퍼레이션의 김철수 상무가 테디인터내셔널의 이은채 대리에게 신규 자전거 'ZENESIS' 모델의 브로슈어 요청 및 유통 협력 논의를 위한 미팅을 제안함.\" date='1월 15일 오전 10시'\n"
+     ]
+    }
+   ],
    "source": [
     "# PydanticOutputParser 를 사용하여 결과를 파싱합니다.\n",
     "structured_output = parser.parse(output)\n",
@@ -286,8 +446,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:36:53.953560300Z",
+     "start_time": "2024-09-28T16:36:53.951134Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 출력 파서를 추가하여 전체 체인을 재구성합니다.\n",
@@ -296,9 +461,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:36:56.299712600Z",
+     "start_time": "2024-09-28T16:36:54.533203500Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "EmailSummary(person='김철수', email='chulsoo.kim@bikecorporation.me', subject='\"ZENESIS\" 자전거 유통 협력 및 미팅 일정 제안', summary=\"바이크코퍼레이션의 김철수 상무가 테디인터내셔널의 이은채 대리에게 신규 자전거 'ZENESIS' 모델에 대한 브로슈어 요청 및 유통 협력 논의를 위한 미팅을 제안함.\", date='1월 15일 오전 10시')"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain 을 실행하고 결과를 출력합니다.\n",
     "response = chain.invoke(\n",
@@ -328,8 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:37:07.392495200Z",
+     "start_time": "2024-09-28T16:37:06.870812700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "llm_with_structered = ChatOpenAI(\n",
@@ -339,9 +523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T16:37:09.047292300Z",
+     "start_time": "2024-09-28T16:37:07.392495200Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "EmailSummary(person='김철수', email='chulsoo.kim@bikecorporation.me', subject='\"ZENESIS\" 자전거 유통 협력 및 미팅 일정 제안', summary='김철수 상무는 바이크코퍼레이션의 자전거 유통 협력을 논의하기 위해 ZENESIS 모델의 브로슈어를 요청하고, 기술 사양, 배터리 성능, 디자인 정보가 필요하다고 언급했습니다. 또한, 협력 가능성을 논의하기 위해 1월 15일 오전 10시에 미팅을 제안했습니다.', date='1월 15일 오전 10시')"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# invoke() 함수를 호출하여 결과를 출력합니다.\n",
     "answer = llm_with_structered.invoke(email_conversation)\n",
@@ -356,6 +554,15 @@
     "\n",
     "한 가지 아쉬운 점은 `.with_structured_output()` 함수는 `stream()` 기능을 지원하지 않습니다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
