--- a/04-Model/02-Cache.ipynb
+++ b/04-Model/02-Cache.ipynb
@@ -16,9 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T17:59:22.037637900Z",
+     "start_time": "2024-09-28T17:59:22.006178500Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -29,9 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T17:59:22.039364800Z",
+     "start_time": "2024-09-28T17:59:22.031626600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH04-Models\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install langchain-teddynote\n",
@@ -50,8 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T17:59:23.784081700Z",
+     "start_time": "2024-09-28T17:59:22.257562200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -69,9 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T17:59:28.103814900Z",
+     "start_time": "2024-09-28T17:59:24.569267500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한국은 동아시아에 위치한 백만 도민의 나라로, 고대부터 현재까지 다양한 역사와 문화를 자랑한다. 주요 도시는 수도인 서울을 비롯해 부산, 대구, 인천 등이 있으며, 경제적으로는 세계적으로 강력한 식품, 기술 및 자동차 산업을 보유하고 있다. 한류 열풍으로 인해 한국 문화는 전 세계적으로 인기를 끌고 있으며, K-pop, K-drama, 한식 등이 세계 각지에서 사랑받고 있다. 한반도 북쪽에는 북한이 있으며, 남쪽에는 한국이 위치해 있으며, 두 나라 간에는 여전히 긴장 관계가 이어지고 있다. 현재는 코로나19 대응을 비롯한 다양한 사회적 문제들에 대처하면서 미래를 준비하고 있다.\n",
+      "CPU times: total: 62.5 ms\n",
+      "Wall time: 3.52 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time \n",
     "response = chain.invoke({\"country\": \"한국\"})\n",
@@ -89,9 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T17:59:34.266314700Z",
+     "start_time": "2024-09-28T17:59:30.922017700Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한국은 동아시아에 위치한 고도 경제 선진국가로, 세계적으로 유명한 문화와 역사를 가지고 있습니다. 수도는 서울이며, 국민의 대다수가 한국어를 사용합니다. 한국은 고대부터 현대까지 다양한 역사적 사건과 변화를 겪어왔으며, 현재는 선진화된 IT 기술과 엔터테인먼트 산업이 주목받고 있습니다. 또한, 한류 열풍으로 한국의 문화와 음식, 패션 등이 전 세계적으로 인기를 끌고 있습니다. 한반도 북쪽에는 북한이 위치하고 있으며, 남한과의 관계는 여전히 긴장 상태에 있지만 향후 평화적인 해결을 향해 노력하고 있습니다.\n",
+      "CPU times: total: 125 ms\n",
+      "Wall time: 3.32 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from langchain.globals import set_llm_cache\n",
@@ -107,9 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T17:59:34.266314700Z",
+     "start_time": "2024-09-28T17:59:34.259597800Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한국은 동아시아에 위치한 고도 경제 선진국가로, 세계적으로 유명한 문화와 역사를 가지고 있습니다. 수도는 서울이며, 국민의 대다수가 한국어를 사용합니다. 한국은 고대부터 현대까지 다양한 역사적 사건과 변화를 겪어왔으며, 현재는 선진화된 IT 기술과 엔터테인먼트 산업이 주목받고 있습니다. 또한, 한류 열풍으로 한국의 문화와 음식, 패션 등이 전 세계적으로 인기를 끌고 있습니다. 한반도 북쪽에는 북한이 위치하고 있으며, 남한과의 관계는 여전히 긴장 상태에 있지만 향후 평화적인 해결을 향해 노력하고 있습니다.\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# 체인을 실행합니다.\n",
@@ -126,8 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:00:31.509523500Z",
+     "start_time": "2024-09-28T18:00:31.469280200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_community.cache import SQLiteCache\n",
@@ -144,15 +228,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:00:54.970364Z",
+     "start_time": "2024-09-28T18:00:49.044372600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한국은 동아시아에 위치한 고도로 발전한 현대국가로, 역사적으로는 5000년 이상의 역사를 자랑한다. 경제적으로는 세계적으로 주요한 경제강국으로 발전하였고, 기술력과 문화적 영향력도 크게 증가하였다. 한국은 또한 한류와 K-pop을 통해 세계 각지에서 큰 인기를 얻고 있으며, 한국 요리와 전통 문화도 많은 사람들에게 사랑받고 있다. 정치적으로는 북한과의 관계가 계속 이슈가 되고 있으며, 미국과의 동맹 관계도 중요하게 다뤄지고 있다. 한국은 다양한 측면에서 세계에서 주목받는 나라 중 하나이다.\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 5.92 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time \n",
     "# 체인을 실행합니다.\n",
     "response = chain.invoke({\"country\": \"한국\"})\n",
     "print(response.content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한국은 동아시아에 위치한 고도로 발전한 현대국가로, 역사적으로는 5000년 이상의 역사를 자랑한다. 경제적으로는 세계적으로 주요한 경제강국으로 발전하였고, 기술력과 문화적 영향력도 크게 증가하였다. 한국은 또한 한류와 K-pop을 통해 세계 각지에서 큰 인기를 얻고 있으며, 한국 요리와 전통 문화도 많은 사람들에게 사랑받고 있다. 정치적으로는 북한과의 관계가 계속 이슈가 되고 있으며, 미국과의 동맹 관계도 중요하게 다뤄지고 있다. 한국은 다양한 측면에서 세계에서 주목받는 나라 중 하나이다.\n",
+      "CPU times: total: 78.1 ms\n",
+      "Wall time: 167 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "# 체인을 실행합니다.\n",
+    "response = chain.invoke({\"country\": \"한국\"})\n",
+    "print(response.content)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:00:58.477620Z",
+     "start_time": "2024-09-28T18:00:58.295294700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
