--- a/04-Model/03-ModelSerialization.ipynb
+++ b/04-Model/03-ModelSerialization.ipynb
@@ -28,9 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:29.930381500Z",
+     "start_time": "2024-09-28T18:07:29.868006400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -41,9 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:29.993451200Z",
+     "start_time": "2024-09-28T18:07:29.877873300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH04-Models\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install langchain-teddynote\n",
@@ -55,8 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:29.997474300Z",
+     "start_time": "2024-09-28T18:07:29.884393400Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -76,9 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.021757100Z",
+     "start_time": "2024-09-28T18:07:29.892383800Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatOpenAI: True\n"
+     ]
+    }
+   ],
    "source": [
     "# 직렬화가 가능한지 체크합니다.\n",
     "print(f\"ChatOpenAI: {ChatOpenAI.is_lc_serializable()}\")"
@@ -93,9 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.303737400Z",
+     "start_time": "2024-09-28T18:07:29.898386300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatOpenAI: True\n"
+     ]
+    }
+   ],
    "source": [
     "llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
     "\n",
@@ -105,9 +165,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.303737400Z",
+     "start_time": "2024-09-28T18:07:30.296699Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 체인을 생성합니다.\n",
     "chain = prompt | llm\n",
@@ -139,9 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.362086300Z",
+     "start_time": "2024-09-28T18:07:30.303737400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'lc': 1,\n 'type': 'constructor',\n 'id': ['langchain', 'schema', 'runnable', 'RunnableSequence'],\n 'kwargs': {'first': {'lc': 1,\n   'type': 'constructor',\n   'id': ['langchain', 'prompts', 'prompt', 'PromptTemplate'],\n   'kwargs': {'input_variables': ['fruit'],\n    'template': '{fruit}의 색상이 무엇입니까?',\n    'template_format': 'f-string'},\n   'name': 'PromptTemplate',\n   'graph': {'nodes': [{'id': 0, 'type': 'schema', 'data': 'PromptInput'},\n     {'id': 1,\n      'type': 'runnable',\n      'data': {'id': ['langchain', 'prompts', 'prompt', 'PromptTemplate'],\n       'name': 'PromptTemplate'}},\n     {'id': 2, 'type': 'schema', 'data': 'PromptTemplateOutput'}],\n    'edges': [{'source': 0, 'target': 1}, {'source': 1, 'target': 2}]}},\n  'last': {'lc': 1,\n   'type': 'constructor',\n   'id': ['langchain', 'chat_models', 'openai', 'ChatOpenAI'],\n   'kwargs': {'model_name': 'gpt-3.5-turbo',\n    'temperature': 0.0,\n    'openai_api_key': {'lc': 1, 'type': 'secret', 'id': ['OPENAI_API_KEY']},\n    'openai_proxy': '',\n    'max_retries': 2,\n    'n': 1},\n   'name': 'ChatOpenAI',\n   'graph': {'nodes': [{'id': 0, 'type': 'schema', 'data': 'ChatOpenAIInput'},\n     {'id': 1,\n      'type': 'runnable',\n      'data': {'id': ['langchain', 'chat_models', 'openai', 'ChatOpenAI'],\n       'name': 'ChatOpenAI'}},\n     {'id': 2, 'type': 'schema', 'data': 'ChatOpenAIOutput'}],\n    'edges': [{'source': 0, 'target': 1}, {'source': 1, 'target': 2}]}}},\n 'name': 'RunnableSequence',\n 'graph': {'nodes': [{'id': 0, 'type': 'schema', 'data': 'PromptInput'},\n   {'id': 1,\n    'type': 'runnable',\n    'data': {'id': ['langchain', 'prompts', 'prompt', 'PromptTemplate'],\n     'name': 'PromptTemplate'}},\n   {'id': 2,\n    'type': 'runnable',\n    'data': {'id': ['langchain', 'chat_models', 'openai', 'ChatOpenAI'],\n     'name': 'ChatOpenAI'}},\n   {'id': 3, 'type': 'schema', 'data': 'ChatOpenAIOutput'}],\n  'edges': [{'source': 0, 'target': 1},\n   {'source': 2, 'target': 3},\n   {'source': 1, 'target': 2}]}}"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.load import dumpd, dumps\n",
     "\n",
@@ -151,9 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.363079100Z",
+     "start_time": "2024-09-28T18:07:30.322301100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "dict"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 직렬화된 체인의 타입을 확인합니다.\n",
     "type(dumpd_chain)"
@@ -168,9 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.364078500Z",
+     "start_time": "2024-09-28T18:07:30.328633700Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'{\"lc\": 1, \"type\": \"constructor\", \"id\": [\"langchain\", \"schema\", \"runnable\", \"RunnableSequence\"], \"kwargs\": {\"first\": {\"lc\": 1, \"type\": \"constructor\", \"id\": [\"langchain\", \"prompts\", \"prompt\", \"PromptTemplate\"], \"kwargs\": {\"input_variables\": [\"fruit\"], \"template\": \"{fruit}\\\\uc758 \\\\uc0c9\\\\uc0c1\\\\uc774 \\\\ubb34\\\\uc5c7\\\\uc785\\\\ub2c8\\\\uae4c?\", \"template_format\": \"f-string\"}, \"name\": \"PromptTemplate\", \"graph\": {\"nodes\": [{\"id\": 0, \"type\": \"schema\", \"data\": \"PromptInput\"}, {\"id\": 1, \"type\": \"runnable\", \"data\": {\"id\": [\"langchain\", \"prompts\", \"prompt\", \"PromptTemplate\"], \"name\": \"PromptTemplate\"}}, {\"id\": 2, \"type\": \"schema\", \"data\": \"PromptTemplateOutput\"}], \"edges\": [{\"source\": 0, \"target\": 1}, {\"source\": 1, \"target\": 2}]}}, \"last\": {\"lc\": 1, \"type\": \"constructor\", \"id\": [\"langchain\", \"chat_models\", \"openai\", \"ChatOpenAI\"], \"kwargs\": {\"model_name\": \"gpt-3.5-turbo\", \"temperature\": 0.0, \"openai_api_key\": {\"lc\": 1, \"type\": \"secret\", \"id\": [\"OPENAI_API_KEY\"]}, \"openai_proxy\": \"\", \"max_retries\": 2, \"n\": 1}, \"name\": \"ChatOpenAI\", \"graph\": {\"nodes\": [{\"id\": 0, \"type\": \"schema\", \"data\": \"ChatOpenAIInput\"}, {\"id\": 1, \"type\": \"runnable\", \"data\": {\"id\": [\"langchain\", \"chat_models\", \"openai\", \"ChatOpenAI\"], \"name\": \"ChatOpenAI\"}}, {\"id\": 2, \"type\": \"schema\", \"data\": \"ChatOpenAIOutput\"}], \"edges\": [{\"source\": 0, \"target\": 1}, {\"source\": 1, \"target\": 2}]}}}, \"name\": \"RunnableSequence\", \"graph\": {\"nodes\": [{\"id\": 0, \"type\": \"schema\", \"data\": \"PromptInput\"}, {\"id\": 1, \"type\": \"runnable\", \"data\": {\"id\": [\"langchain\", \"prompts\", \"prompt\", \"PromptTemplate\"], \"name\": \"PromptTemplate\"}}, {\"id\": 2, \"type\": \"runnable\", \"data\": {\"id\": [\"langchain\", \"chat_models\", \"openai\", \"ChatOpenAI\"], \"name\": \"ChatOpenAI\"}}, {\"id\": 3, \"type\": \"schema\", \"data\": \"ChatOpenAIOutput\"}], \"edges\": [{\"source\": 0, \"target\": 1}, {\"source\": 2, \"target\": 3}, {\"source\": 1, \"target\": 2}]}}'"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# dumps 함수를 사용하여 직렬화된 체인을 확인합니다.\n",
     "dumps_chain = dumps(chain)\n",
@@ -179,9 +295,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.364078500Z",
+     "start_time": "2024-09-28T18:07:30.334254100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "str"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 직렬화된 체인의 타입을 확인합니다.\n",
     "type(dumps_chain)"
@@ -237,14 +367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.364078500Z",
+     "start_time": "2024-09-28T18:07:30.339949900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "# fuit_chain.pkl 파일로 직렬화된 체인을 저장합니다.\n",
-    "with open(\"fruit_chain.pkl\", \"wb\") as f:\n",
+    "with open(\"models/fruit_chain.pkl\", \"wb\") as f:\n",
     "    pickle.dump(dumpd_chain, f)"
    ]
   },
@@ -257,13 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.364078500Z",
+     "start_time": "2024-09-28T18:07:30.344860300Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open(\"fruit_chain.json\", \"w\") as fp:\n",
+    "with open(\"models/fruit_chain.json\", \"w\") as fp:\n",
     "    json.dump(dumpd_chain, fp)"
    ]
   },
@@ -283,14 +423,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:30.364078500Z",
+     "start_time": "2024-09-28T18:07:30.350214700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "# pickle 파일을 로드합니다.\n",
-    "with open(\"fruit_chain.pkl\", \"rb\") as f:\n",
+    "with open(\"models/fruit_chain.pkl\", \"rb\") as f:\n",
     "    loaded_chain = pickle.load(f)"
    ]
   },
@@ -303,9 +448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:31.860895100Z",
+     "start_time": "2024-09-28T18:07:30.357080600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='사과의 색상은 주로 빨간색이지만, 녹색, 노란색, 주황색 등 다양한 색상의 사과도 있습니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 51, 'prompt_tokens': 24, 'total_tokens': 75, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None} id='run-83b25b3e-913d-40ca-a9de-f29d08cf9c7e-0' usage_metadata={'input_tokens': 24, 'output_tokens': 51, 'total_tokens': 75}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.load import load\n",
     "\n",
@@ -318,9 +476,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:33.221238200Z",
+     "start_time": "2024-09-28T18:07:31.862893Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='사과의 색상은 주로 빨간색이지만, 녹색, 노란색, 주황색 등 다양한 색상의 사과도 있습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 51, 'prompt_tokens': 24, 'total_tokens': 75, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-611a01e7-c942-4f8c-a3d3-3101ffc9141b-0', usage_metadata={'input_tokens': 24, 'output_tokens': 51, 'total_tokens': 75})"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.load import load, loads\n",
     "\n",
@@ -334,20 +506,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:33.589272900Z",
+     "start_time": "2024-09-28T18:07:33.226260200Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "with open(\"fruit_chain.json\", \"r\") as fp:\n",
+    "with open(\"models/fruit_chain.json\", \"r\") as fp:\n",
     "    loaded_from_json_chain = json.load(fp)\n",
     "    loads_chain = load(loaded_from_json_chain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:07:34.628952Z",
+     "start_time": "2024-09-28T18:07:33.589272900Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='사과의 색상은 주로 빨간색이지만, 녹색, 노란색, 주황색 등 다양한 색상의 사과도 있습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 51, 'prompt_tokens': 24, 'total_tokens': 75, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-c1bee878-bbcf-4c9b-bc73-75df47c84896-0', usage_metadata={'input_tokens': 24, 'output_tokens': 51, 'total_tokens': 75})"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 불러온 체인이 정상 동작하는지 확인합니다.\n",
     "loads_chain.invoke({\"fruit\": \"사과\"})"
