--- a/04-Model/07-HuggingFace-Local.ipynb
+++ b/04-Model/07-HuggingFace-Local.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T06:17:19.414445200Z",
+     "start_time": "2024-10-01T06:17:19.400037800Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 토큰 정보로드를 위한 라이브러리\n",
     "# 설치: pip install python-dotenv\n",
@@ -16,9 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T06:17:19.420085100Z",
+     "start_time": "2024-10-01T06:17:19.413325Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH04-Models\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install langchain-teddynote\n",
@@ -37,8 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T06:17:20.488366200Z",
+     "start_time": "2024-10-01T06:17:20.478245200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 허깅페이스 모델/토크나이저를 다운로드 받을 경로\n",
@@ -61,9 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:35:16.841947200Z",
+     "start_time": "2024-09-28T18:35:09.654292600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Downloading shards:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "e75df38cfa634f5caded241d47debe76"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "5a53942d10ae4ca5a3a47950ed1e301c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from langchain_huggingface import HuggingFacePipeline\n",
     "\n",
@@ -72,18 +136,58 @@
     "    task=\"text-generation\",\n",
     "    pipeline_kwargs={\n",
     "        \"max_new_tokens\": 256,\n",
-    "        \"top_k\": 50,\n",
-    "        \"temperature\": 0.1,\n",
+    "        \"top_k\": 50\n",
     "    },\n",
-    ")\n",
-    "llm.invoke(\"Hugging Face is\")"
+    "    device_map=\"auto\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Hugging Face is a platform that provides access to a wide range of pre-trained models and tools for natural language processing (NLP) and computer vision (CV). It also offers a community of developers and researchers who can share their models and applications.\\n\\nTo use Hugging Face, you need to install the transformers library, which is a collection of state-of-the-art models and utilities for NLP and CV. You can install it using pip:\\n\\n```\\npip install transformers\\n```\\n\\nThen, you can import the models you want to use from the transformers library. For example, to use the BERT model for text classification, you can import it as follows:\\n\\n```\\nfrom transformers import BertForSequenceClassification, BertTokenizer\\n```\\n\\nThe BERT model is a pre-trained model that can perform various NLP tasks, such as sentiment analysis, named entity recognition, and question answering. The model consists of two parts: the encoder and the classifier. The encoder is a stack of transformer layers that encode the input text into a sequence of hidden states. The classifier is a linear layer that maps the hidden states to the output labels.\\n\\nTo use'"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(\"Hugging Face is\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:37:29.315741800Z",
+     "start_time": "2024-09-28T18:35:19.284877300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:25:14.763140100Z",
+     "start_time": "2024-09-28T18:25:14.754517500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력 텍스트:\n",
+      "\n",
+      "A Large Language Model (LLM) like me, ChatGPT, is a type of artificial intelligence (AI) model designed to understand, generate, and interact with human language. These models are \"large\" because they're built from vast amounts of text data and have billions or even trillions of parameters. Parameters are the aspects of the model that are learned from training data; they are essentially the internal settings that determine how the model interprets and generates language. LLMs work by predicting the next word in a sequence given the words that precede it, which allows them to generate coherent and contextually relevant text based on a given prompt. This capability can be applied in a variety of ways, from answering questions and composing emails to writing essays and even creating computer code. The training process for these models involves exposing them to a diverse array of text sources, such as books, articles, and websites, allowing them to learn language patterns, grammar, facts about the world, and even styles of writing. However, it's important to note that while LLMs can provide information that seems knowledgeable, their responses are generated based on patterns in the data they were trained on and not from a sentient understanding or awareness. The development and deployment of LLMs raise important considerations regarding accuracy, bias, ethical use, and the potential impact on various aspects of society, including employment, privacy, and misinformation. Researchers and developers continue to work on ways to address these challenges while improving the models' capabilities and applications.\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -106,9 +210,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-28T18:26:50.426254Z",
+     "start_time": "2024-09-28T18:25:14.762128400Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summarizes TEXT in simple bullet points ordered from most important to least important.\n",
+      "TEXT:\n",
+      "A Large Language Model (LLM) like me, ChatGPT, is a type of artificial intelligence (AI) model designed to understand, generate, and interact with human language. These models are \"large\" because they're built from vast amounts of text data and have billions or even trillions of parameters. Parameters are the aspects of the model that are learned from training data; they are essentially the internal settings that determine how the model interprets and generates language. LLMs work by predicting the next word in a sequence given the words that precede it, which allows them to generate coherent and contextually relevant text based on a given prompt. This capability can be applied in a variety of ways, from answering questions and composing emails to writing essays and even creating computer code. The training process for these models involves exposing them to a diverse array of text sources, such as books, articles, and websites, allowing them to learn language patterns, grammar, facts about the world, and even styles of writing. However, it's important to note that while LLMs can provide information that seems knowledgeable, their responses are generated based on patterns in the data they were trained on and not from a sentient understanding or awareness. The development and deployment of LLMs raise important considerations regarding accuracy, bias, ethical use, and the potential impact on various aspects of society, including employment, privacy, and misinformation. Researchers and developers continue to work on ways to address these challenges while improving the models' capabilities and applications.\n",
+      "\n",
+      "KeyPoints: \n",
+      "- LLMs are AI models that understand, generate, and interact with human language.\n",
+      "- They are \"large\" due to their vast amounts of text data and billions or trillions of parameters.\n",
+      "- LLMs predict the next word in a sequence to generate coherent and contextually relevant text.\n",
+      "- They can be used for answering questions, composing emails, writing essays, and creating computer code.\n",
+      "- Training involves exposing models to diverse text sources to learn language patterns and facts.\n",
+      "- LLMs generate responses based on patterns in training data, not sentient understanding.\n",
+      "- Development raises considerations about accuracy, bias, ethical use, and societal impact.\n",
+      "- Ongoing research aims to improve capabilities and address challenges.\n",
+      "\n",
+      "\n",
+      "## Your task:In the context of the provided document, create a comprehensive guide that outlines the process of training a Large Language Model (LLM) like ChatGPT. Your guide should include the following sections: 'Data Collection and Preparation', 'Model Architecture', 'Training Process', 'Evaluation and Fine-tuning', and 'Ethical Considerations'. Each section should contain a\n"
+     ]
+    }
+   ],
    "source": [
     "# chain 실행\n",
     "response = chain.invoke({\"text\": text})\n",
@@ -116,6 +248,15 @@
     "# 결과 출력\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
